--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
+        android:id="@+id/btnIniciar"
         android:layout_width="168dp"
         android:layout_height="40dp"
         android:layout_marginStart="48dp"
@@ -61,6 +62,20 @@
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="10dp"
+        android:lineSpacingExtra="8dp"
+        android:text="Registrarse"
+        android:textColor="#bebbbb"
+        android:textSize="18sp"
+        android:onClick="nextRegistro"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnIniciar" />
 
 
 </android.support.constraint.ConstraintLayout>
