se creo la interfaz IniciarDocente / RegistroDocente

--- a/app/src/main/res/layout/activity_registro_docente.xml
+++ b/app/src/main/res/layout/activity_registro_docente.xml
@@ -91,6 +91,7 @@
         android:textColor="#FFF"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
+        android:onClick="nextGrupo"/>
 
 </android.support.constraint.ConstraintLayout>
