se creo la interfaz IniciarDocente / RegistroDocente

--- a/app/src/main/res/layout/activity_seleccion_grupo.xml
+++ b/app/src/main/res/layout/activity_seleccion_grupo.xml
@@ -4,7 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SeleccionGrupo"
-    android:background="@drawable/fnd">
+    tools:context=".SeleccionGrupo">
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/grpListItem"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </android.support.constraint.ConstraintLayout>
